fix horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
 /* -- COMMON PARAMETERS -- */
 
 .container {
-  min-width: 320px;
+  min-width: 319px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -378,7 +378,7 @@ img {
 }
 
 .hero-title {
-  max-width: 318px;
+  max-width: 320px;
   margin: 0 auto 72px;
 
   color: var(--white-bg-color);
@@ -1140,7 +1140,6 @@ img {
 @media screen and (max-width: 407px) {
   .modal {
     width: 100%;
-    /* height: 570px; */
   }
 }
 
@@ -1353,7 +1352,7 @@ img {
   flex-direction: column;
   width: 100vw;
   height: 100vh;
-  padding: 80px 40px 40px;
+  padding: 80px 40px;
 
   background-color: var(--white-bg-color);
   z-index: 999;
